fixed white space

--- a/css/mobilestyle.css
+++ b/css/mobilestyle.css
@@ -1,8 +1,8 @@
 @media screen and (max-device-width: 500px), screen and (max-width:500px){
-   div{
-   	border: 1px solid red;
-   }
-
+	div{
+		margin-right: 0px !important;
+		padding-right: 0px !important;
+	}
    body{
    		height: 100%;
    		width: 400px;
@@ -13,26 +13,22 @@
    }
 
    .homebody{
+   	padding: 0px;
 	min-width: 400px;
 	width: 100%;
 	height: 100%;
 	
 	}
    #homelogo{
-	margin-left: -19px;
+	display: none;
 	}
 	.navbar{
-	margin-top: 25px;
-	width: 400px;
-	max-width: 400px;
-	min-width: 400px;
+	
+	display: none;
 	}
 
 	.navlinks li{
-	float: left;
-	margin: 0px 7px 0px 30px;
-	font-size: 10px;
-	font-weight: 10px;
+	display: none;
 	}
 
 	.doodle{
@@ -51,15 +47,23 @@
 	left: 50px;
 	}
 	
-	.emaillink{
-		font-size: 50px;
-	}
+	.email{
+	font-size: 5px;
+  	width: 380px;
+    min-width: 380px;
+    max-width: 380px;
+ 	}
+
+
 
 	#fdivcontact{
-	margin-left: 20px;
+	margin-left: 10px;
+	max-width: 390px;
+	min-width: 390px;
 	width: 390px;
-	background-position: center center;
-	background-image: contain;
+	height: 350px;
+	
+	background-image: cover;
 	}
 
 	.homebox {
@@ -207,6 +211,7 @@
 		height: 2550px;
 	}
 	#fourthbox{
+		padding: 0px;
 		width: 400px;
 		max-width: 400px;
 		min-width: 400px;
